--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,5 +10,6 @@ parserOptions:
 rules: {
   "no-console": "off",
   "import/extensions": "off",
+  "no-case-declarations": "off",
   "no-underscore-dangle": [2, { "allow": ["__filename", "__dirname"] }]
 }
